--- a/package.json
+++ b/package.json
@@ -7,9 +7,12 @@
     "@types/node": "12.12.3",
     "@types/react": "16.9.11",
     "@types/react-dom": "16.9.3",
+    "bulma": "^0.8.0",
     "react": "^16.11.0",
+    "react-bulma-components": "^3.1.3",
     "react-dom": "^16.11.0",
     "react-scripts": "3.2.0",
+    "styled-components": "^4.4.1",
     "typescript": "3.6.4"
   },
   "scripts": {
